# CMakeDemo

./: .gitignore  README.md
01-basic/A-hello-cmake/: CMakeLists.txt  main.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/src/: hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/src/: hello.cpp
01-basic/H-third-party/: CMakeLists.txt  main.cpp
02-sub-projects/A-basic/: CMakeLists.txt
02-sub-projects/A-basic/lib1/: CMakeLists.txt
02-sub-projects/A-basic/lib1/inc/: generate-string.h
02-sub-projects/A-basic/lib1/src/: generate-string.cpp
02-sub-projects/A-basic/lib2/: CMakeLists.txt
02-sub-projects/A-basic/lib2/inc/: print-string.h
02-sub-projects/A-basic/lib2/src/: print-string.cpp
02-sub-projects/A-basic/main/: CMakeLists.txt  main.cpp
Ex01/: CMakeLists.txt
Ex01/Main/: CMakeLists.txt  main.cpp
Ex01/Utils/: CMakeLists.txt  Config.cmake.in
Ex01/Utils/inc/: MyMath.h
Ex01/Utils/src/: MyMath.cpp
Fcitx5-qt/: fcitx5-qt编译记录.md
Step01/: CMakeLists.txt  README.md  tutorial.cpp
Step02/: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cxx
Step02/MathFunctions/: CMakeLists.txt
Step03/: CMakeLists.txt  README.md
Step03/MathFunctions/: CMakeLists.txt
Step04/: CMakeLists.txt  README.md
Step04/MathFunctions/: CMakeLists.txt
Step05/: CMakeLists.txt  README.md
Step05/MathFunctions/: CMakeLists.txt
Step06/: CMakeLists.txt  README.md
Step07/: README.md
Step07/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step08/: README.md
Step08/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step09/: CMakeLists.txt  README.md
Step10/: CMakeLists.txt  README.md
Step10/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
Step11/: CMakeLists.txt  README.md
Step11/MathFunctions/: CMakeLists.txt
Step12/: CMakeLists.txt  README.md
Step12/MathFunctions/: CMakeLists.txt
